...
                            popUpTo(NavRoutes.INTERNSHIP) {
                                inclusive = true
                            }
                        }
                    }
                }
                else showError("Ошибка заполнения полей", "Не все поля заполнены")
            }
        }
    }

    private fun showError(title: String, desc: String) {
        Log.d("events", "$title $desc")
...
