...
        Text("Пароль", style = typography.descriptionAuth.color(colors.title))
        SpacerHeight(12.dp)
        TextFieldAuth(stateData.password, "*********") {
            vm.updData(stateData.copy(password = it))
        }
        SpacerHeight(40.dp)
        ButtonMaxWidth("Далее", stateData.email.isNotEmpty() && stateData.password.isNotEmpty(), colors.primary) {
            vm.signIn(controller)
        }
        SpacerHeight(12.dp)
        Text(
            text = buildAnnotatedString {
                withStyle(SpanStyle(color = colors.description)) {
...
